[package]
name = "carbon-http_server"
version.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
edition.workspace = true

[dependencies]
uhsapi.workspace = true
thiserror = "2.0.12"
tokio = { version = "1.46.1", features = ["full"] }
bytes = "1.10.1"
static_assertions = { version = "1.1.0", features = ["nightly"] }
smallvec = "1.15.1"
